# unicode-ident

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: id.rs  xid.rs
c-api/: Cargo.toml  lib.rs
c-api/include/: unicode_ident.h
diagram/: Cargo.toml
diagram/src/: main.rs
generate/: Cargo.toml
generate/src/: main.rs  output.rs  parse.rs  ucd.rs  write.rs
src/: lib.rs  tables.rs
tests/: compare.rs  patch.rs  static_size.rs
tests/crate/: Cargo.toml  test.rs
tests/fst/: id_continue.fst  id_start.fst  mod.rs
tests/tables/: tables.rs
tests/trie/: mod.rs  trie.rs
