[package]
name = "unicode-id-start"
version = "1.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Boshen <boshenc@gmail.com>"]
edition = "2018"
rust-version = "1.31"
license = "MIT OR Apache-2.0"
description = "Determine whether characters have the ID_Start or ID_Continue properties according to Unicode Standard Annex #31"
repository = "https://github.com/Boshen/unicode-id-start"
documentation = "https://docs.rs/unicode-id-start"
readme = "README.md"

[dev-dependencies]
criterion = { version = "0.3", default-features = false }
fst = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
roaring = "0.9"
ucd-trie = { version = "0.1", default-features = false }
unicode-id = "0.3"

[[bench]]
name = "id"
harness = false

[workspace]
members = ["diagram", "generate"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
