[package]
authors = ["David Tolnay <dtolnay@gmail.com>", "Boshen <boshenc@gmail.com>"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]
description = "Determine whether characters have the XID_Start or XID_Continue properties according to Unicode Standard Annex #31"
documentation = "https://docs.rs/unicode-id-start"
edition = "2018"
keywords = ["unicode"]
license = "(MIT OR Apache-2.0) AND Unicode-DFS-2016"
name = "unicode-id-start"
readme = "README.md"
repository = "https://github.com/Boshen/unicode-id-start"
rust-version = "1.31"
version = "1.0.2"

[dev-dependencies]
criterion = { version = "0.3", default-features = false }
fst = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
roaring = "0.10"
ucd-trie = { version = "0.1", default-features = false }
unicode-id = "0.3"

[[bench]]
name = "id"
harness = false

[workspace]
members = ["diagram", "generate"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
